Update missing colours from colourswitcher, resolve padding on mobile views

--- a/less/essential/alternative1.less
+++ b/less/essential/alternative1.less
@@ -1,5 +1,12 @@
 body.essential-colours-alternative1 {
     border-top-color: ~"[[setting:alternativethemecolor1]]";
+	color: ~"[[setting:alternativethemecolor1]]";
+}
+
+body.essential-colours-alternative1 { 
+	h1, h2, h3, h4, h5, h6 {
+		color: ~"[[setting:alternativethemecolor1]]";
+	}
 }
 
 .essential-colours-alternative1 a,
@@ -112,9 +119,18 @@ body.essential-colours-alternative1 {
 .essential-colours-alternative1 .da-slider {
 	border-top-color: ~"[[setting:alternativethemecolor1]]";
 	border-bottom-color:  ~"[[setting:alternativethemecolor1]]";
+	background-color: ~"[[setting:alternativethemecolor1]]";
+}
+
+.essential-colours-alternative1 .da-slide .da-link {
+	background-color: ~"[[setting:alternativethemecolor1]]";
 }
 
 .essential-colours-alternative1 .block .header .title h2:before {
+    color: ~"[[setting:alternativethemecolor1]]";
+}
+
+.essential-colours-alternative1 .block .header .title h2 {
     color: ~"[[setting:alternativethemecolor1]]";
 }
 
@@ -156,8 +172,12 @@ body.essential-colours-alternative1 {
     background: ~"[[setting:alternativethemecolor1]]";
 }
 
-.essential-colours-alternative1 #page-footer .tree_item.branch:before {
+.essential-colours-alternative1 .tree_item.branch:before {
     color: ~"[[setting:alternativethemecolor1]]";
+}
+
+.essential-colours-alternative1 .block #icon {
+	color: ~"[[setting:alternativethemecolor1]]";
 }
     
 .essential-colours-alternative1 #page-footer .block_login input[type="submit"] {
