--- a/less/essential/alternative2.less
+++ b/less/essential/alternative2.less
@@ -1,5 +1,6 @@
 body.essential-colours-alternative2 {
     border-top-color: ~"[[setting:alternativethemecolor2]]";
+	color: ~"[[setting:alternativethemecolor2]]";
 }
 
 .essential-colours-alternative2 a,
@@ -112,9 +113,18 @@ body.essential-colours-alternative2 {
 .essential-colours-alternative2 .da-slider {
     border-top-color: ~"[[setting:alternativethemecolor2]]";
     border-bottom-color:  ~"[[setting:alternativethemecolor2]]";
+	background-color: ~"[[setting:alternativethemecolor1]]";
+}
+
+.essential-colours-alternative2 .da-slide .da-link {
+	background-color: ~"[[setting:alternativethemecolor2]]";
 }
 
 .essential-colours-alternative2 .block .header .title h2:before {
+    color: ~"[[setting:alternativethemecolor2]]";
+}
+
+.essential-colours-alternative2 .block .header .title h2 {
     color: ~"[[setting:alternativethemecolor2]]";
 }
 
@@ -132,6 +142,12 @@ body.essential-colours-alternative2 {
 
 .essential-colours-alternative2 .block_login .footer a:hover {
     background: ~"[[setting:alternativethemehovercolor2]]";
+}
+
+body.essential-colours-alternative2 { 
+	h1, h2, h3, h4, h5, h6 {
+		color: ~"[[setting:alternativethemecolor2]]";
+	}
 }
 
 .essential-colours-alternative2 #page-site-index h2.headingblock:before {
@@ -156,8 +172,12 @@ body.essential-colours-alternative2 {
     background: ~"[[setting:alternativethemecolor2]]";
 }
 
-.essential-colours-alternative2 #page-footer .tree_item.branch:before {
+.essential-colours-alternative2 .tree_item.branch:before {
     color: ~"[[setting:alternativethemecolor2]]";
+}
+
+.essential-colours-alternative2 .block #icon {
+	color: ~"[[setting:alternativethemecolor2]]";
 }
     
 .essential-colours-alternative2 #page-footer .block_login input[type="submit"] {
