--- a/less/essential/alternative3.less
+++ b/less/essential/alternative3.less
@@ -1,5 +1,12 @@
 body.essential-colours-alternative3 {
     border-top-color: ~"[[setting:alternativethemecolor3]]";
+	color: ~"[[setting:alternativethemecolor3]]";
+}
+
+body.essential-colours-alternative3 { 
+	h1, h2, h3, h4, h5, h6 {
+		color: ~"[[setting:alternativethemecolor3]]";
+	}
 }
 
 .essential-colours-alternative3 a,
@@ -110,11 +117,20 @@ body.essential-colours-alternative3 {
 }
 
 .essential-colours-alternative3 .da-slider {
-    border-top-color: ~"[[setting:alternativethemecolor3]]";
-    border-bottom-color:  ~"[[setting:alternativethemecolor3]]";
+	border-top-color: ~"[[setting:alternativethemecolor3]]";
+	border-bottom-color:  ~"[[setting:alternativethemecolor3]]";
+	background-color: ~"[[setting:alternativethemecolor3]]";
+}
+
+.essential-colours-alternative3 .da-slide .da-link {
+	background-color: ~"[[setting:alternativethemecolor3]]";
 }
 
 .essential-colours-alternative3 .block .header .title h2:before {
+    color: ~"[[setting:alternativethemecolor3]]";
+}
+
+.essential-colours-alternative3 .block .header .title h2 {
     color: ~"[[setting:alternativethemecolor3]]";
 }
 
@@ -156,8 +172,12 @@ body.essential-colours-alternative3 {
     background: ~"[[setting:alternativethemecolor3]]";
 }
 
-.essential-colours-alternative3 #page-footer .tree_item.branch:before {
+.essential-colours-alternative3 .tree_item.branch:before {
     color: ~"[[setting:alternativethemecolor3]]";
+}
+
+.essential-colours-alternative3 .block #icon {
+	color: ~"[[setting:alternativethemecolor3]]";
 }
     
 .essential-colours-alternative3 #page-footer .block_login input[type="submit"] {
